syntax = "proto3";

package cheers.type;

option go_package = "github.com/salazarhugo/cheers1/gen/go/cheers/type/post;postpb";


import "cheers/type/privacy/privacy.proto";
import "cheers/type/audio/audio.proto";
import "cheers/type/drink/drink.proto";

message Post {
  string id = 1;
  string creator_id = 2;
  string caption = 3;
  string address = 4;
  Privacy privacy = 5;
  repeated PostMedia post_media = 6;
  string location_name = 8;
  Drink drink = 9;
  int64 drunkenness = 10;
  int64 create_time = 12;
  bool likes_enabled = 22;
  bool comments_enabled = 13;
  bool shares_enabled = 14;
  PostRatio ratio = 15;
  // The latitude in degrees. It must be in the range [-90.0, +90.0].
  double latitude = 16;
  // The longitude in degrees. It must be in the range [-180.0, +180.0].
  double longitude = 17;
  string last_comment_text = 18;
  string last_comment_username = 19;
  int64 last_comment_create_time = 20;
  Audio audio = 21;
  bool notifications_enabled = 23;
  bool has_mentions = 24;
  repeated PostMention mentions = 25;
}

message PostMention {
  string user_id = 1;
  string username = 2;
  string name = 3;
  string picture = 4;
  bool verified = 5;
}

message PostMedia {
  string accessibility_caption = 1;
  MediaType media_type = 2;
  repeated ImageVersion image_versions = 3;
}

message ImageVersion {
  string url = 1;
  string ref = 2;
  int64 width = 3;
  int64 height = 4;
}

enum MediaType {
  IMAGE = 0;
  VIDEO = 1;
}

enum PostRatio {
  RATIO_16_9 = 0;
  RATIO_1_1 = 1;
  RATIO_4_5 = 2;
}